--- a/CollectionOfAlgorithms/CollectionOfAlgorithms.csproj
+++ b/CollectionOfAlgorithms/CollectionOfAlgorithms.csproj
@@ -44,6 +44,11 @@
           <HintPath>..\packages\System.Drawing.Common.5.0.2\lib\net461\System.Drawing.Common.dll</HintPath>
           <Private>True</Private>
         </Reference>
+        <Reference Include="System.Numerics" />
+        <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Xml" />
         <Reference Include="System.Xaml">
             <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -57,6 +62,7 @@
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
         </ApplicationDefinition>
+        <Compile Include="ColorConverter.cs" />
         <Compile Include="Mandelbrot.cs" />
         <Compile Include="RepetitionGraph.cs" />
         <Page Include="MainWindow.xaml">
